Fixed year logo spacing

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -79,7 +79,7 @@ a.documentation
 		border: none
 
 .years
-	margin: 2em 0 1em
+	margin: 3em 0 1em
 	a
 		// border: 1px solid colorBorder
 		// background: rgba(238, 238, 238, 0.33)
